Fixes #3799: Apache Kafka procedures (#4172)
* Fixes #3799: Apache Kafka procedures

* removed unused stuff from procedures

* code cleanup

* removed code unused by procedures

* Added docs and cleanup

* fix tests

* fix other tests

* changed deps

* added dep

* upgraded deps

* removed extradep

* added procs in extended*.txt

* cleanup

* Revert "cleanup"

This reverts commit 6a07e3f3999a05cb1fec1c999c8ca018c7c56182.

* restored stuff

* fixed tests

* cleanup

* resolved deps conflict error